# Application

./: .gitignore  AGENTS.md  LICENSE  MobiDevices-signed.apk.idsig  README.md  mobidevices.keystore  package-lock.json  package.json
.github/workflows/: app-build-common.yml  build.yml  ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD  mobidevices.desktop
debian/: changelog  control  copyright  rules
flatpak/: build.sh  cargo-sources.json  com.mobidevices.desktop.desktop  com.mobidevices.desktop.flathub.yml.in  com.mobidevices.desktop.yml  export-flathub-submission.sh  generate-cargo-sources.sh
linux/: com.mobidevices.desktop.metainfo.xml  install-assets.sh  mobidevices.desktop.in  validate-assets.sh
macos/: clean-dmg-mounts.sh
scripts/: clean-dmg-mounts.sh  generate-flatpak-cargo-sources.sh  install-linux-assets.sh  prepare-snap-build-inputs.sh  validate-linux-assets.sh
snap/: build.sh  prepare-build-inputs.sh  snapcraft.yaml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/i18n/en/: translate.yml
src-tauri/i18n/ru/: translate.yml
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  features.rs  lib.rs  main.rs  shared.rs
src-tauri/src/features/: navigation.rs  window_title.rs
src-tauri/src/features/window_title/scripts/: title_sync.js
src-tauri/src/shared/: external_links.rs
src-tauri/src/shared/external_links/scripts/: link_intercept.js
