[package]
name = "mobidevices-app"
version = "1.0.0"
description = "MobiDevices native app"
authors = ["MobiDevices"]
edition = "2021"

[lib]
name = "mobidevices_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
